--- a/.github/workflows/my-action.yml
+++ b/.github/workflows/my-action.yml
@@ -12,13 +12,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Print hello message
-    - run : echo "Hello world from Testing Job!"
+      run : echo "Hello world from Testing Job!"
 
 
   my_deploy:
     runs-on: ubuntu-latest
     steps:
     - name: Print hello message
-    - run : echo "Hello world from Deploy Job!"
+      run : echo "Hello world from Deploy Job!"
       
       
