--- a/.github/workflows/my-action.yml
+++ b/.github/workflows/my-action.yml
@@ -23,6 +23,16 @@ jobs:
         echo "Hello Message 2"
         echo "Application name: ${{ env.APPLICATION_NAME }}" 
 
+    - name: List of Directory
+      run: ls -al
+    
+    - name: Git Clone my Repo
+      uses: actions\checkout@v1
+      
+    - name: List of Directory
+      run: ls -al      
+      
+      
   my_deploy:
     runs-on: ubuntu-latest
     needs: [my_testing] 
@@ -30,7 +40,14 @@ jobs:
     - name: Print hello message from Deploy
       run : echo "Hello world from Deploy Job!"
       
-    - name: Pr
-      run: |
-        echo "Deploy package name is: ${{ env.DEPLOY_PACKAGE_NAME }}" 
+    - name: Show Deploy Package Name
+      run: echo "Deploy package name is: ${{ env.DEPLOY_PACKAGE_NAME }}" 
       
+    - name: Let's check some available packages 1
+      run: aws --version
+      
+    - name: Let's check some available packages 2 
+      run: python --version
+      
+    - name: Let's check some available packages 2 
+      run: zip --help
