--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,8 @@
-# This is a basic workflow to help you get started with Actions
+#-------------------------------------
+# This is my first workflow 
+# Created by Serhii Maksymovych
+#-------------------------------------
+
 
 name: CI-CD-Pipeline-to-AWS-ElasticBeanstalk
 env:
@@ -13,15 +17,28 @@ on:
   push:
     branches: [ master ]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+# A workflow to delivery package and deploy package  
 jobs:
   my_ci_part:
     runs-on: ubuntu-latest
-
     steps:
+    
     - name: Git clone our repo   
       uses: actions/checkout@v2
+    
     - name: Create Zip deployment package
       run : zip -r ${{ env.DEPLOY_PACKAGE_NAME }} ./ -x *.git*
       
-      
+    - name: Configure my AWS credentials
+      uses: aws_actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id     : ${{ secrets.MY_AWS_ACCESS_KEY }}
+        aws-secret-access-key : ${{ secrets.MY_AWS_SECRET_KEY }}
+        aws-region            : ${{ env.AWS_REGION_NAME }}     
+    
+    - name: Copy deployment package to S3 bucket
+      run : aws s3 cp ${{ env.DEPLOY_PACKAGE_NAME }}  s3://${{ env.EB_PACKAGE_S3_BACKET_NAME }}
+    
+    - name: Print Happy Message for CI finish
+      run : echo "CI Pipeline parts finished successfully!"
+        
