--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,4 +41,31 @@ jobs:
     
     - name: Print Happy Message for CI finish
       run : echo "CI Pipeline parts finished successfully!"
-        
+
+
+	my_cd_part:
+    runs-on: ubuntu-latest
+		needs:   [my_ci_part]
+
+    steps:
+    - name: Configure my AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id     : ${{ secrets.MY_AWS_ACCESS_KEY }}
+        aws-secret-access-key : ${{ secrets.MY_AWS_SECRET_KEY }}
+        aws-region            : ${{ env.AWS_REGION_NAME }}     
+    
+    - name: Create new Elastic Beanstalk Application   
+      run :  
+				aws elasticbeanstalk create-application-version \
+				--application-name ${{ env.EB_APPLICATION_NAME }} \
+				--source-bundle S3Bucket=s3://${{ env.EB_PACKAGE_S3_BACKET_NAME }},S3Key=${{ env.DEPLOY_PACKAGE_NAME }} \
+				--version-label "Ver-${{ github.sha }}" \
+				--description "CommitSHA-${{ github.sha }}"
+
+		- name: Deploy Elastic Beanstalk Application version
+			run: aws elasticbeanstalk update-environment --environment-name ${{ env.EB_ENVIRONMENT_NAME }} --version-label "Ver-${{ github.sha }}"
+
+    - name: Print Happy Message for CD finish
+      run : echo "CD Pipeline parts finished successfully!"
+		        
