--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,10 +44,10 @@ jobs:
 
 
 	my_cd_part:
-    runs-on: ubuntu-latest
-		needs:   [my_ci_part]
+  	runs-on: ubuntu-latest
+		needs:   [ my_ci_part ]
 
-    steps:
+		steps:
     - name: Configure my AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
@@ -55,11 +55,11 @@ jobs:
         aws-secret-access-key : ${{ secrets.MY_AWS_SECRET_KEY }}
         aws-region            : ${{ env.AWS_REGION_NAME }}     
     
-    - name: Create new Elastic Beanstalk Application   
-      run :  
+    - name: Create new Elastic Beanstalk Application  
+			run : | 
 				aws elasticbeanstalk create-application-version \
-				--application-name ${{ env.EB_APPLICATION_NAME }} \
-				--source-bundle S3Bucket=s3://${{ env.EB_PACKAGE_S3_BACKET_NAME }},S3Key=${{ env.DEPLOY_PACKAGE_NAME }} \
+				--application-name "${{ env.EB_APPLICATION_NAME }}" \
+				--source-bundle S3Bucket="${{ env.EB_PACKAGE_S3_BACKET_NAME }}",S3Key="${{ env.DEPLOY_PACKAGE_NAME }}" \
 				--version-label "Ver-${{ github.sha }}" \
 				--description "CommitSHA-${{ github.sha }}"
 
